ProjectBrief/src/parser.output
Terminals unused in grammar

    CONSTANT


State 332 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: translation_unit

    2 translation_unit: external_declaration
    3                 | translation_unit external_declaration

    4 external_declaration: function_definition
    5                     | declaration

    6 function_definition: declaration_specifiers declarator declaration_list compound_statement
    7                    | declaration_specifiers declarator compound_statement
    8                    | declarator declaration_list compound_statement
    9                    | declarator compound_statement

   10 declaration_specifiers: storage_class_specifier
   11                       | storage_class_specifier declaration_specifiers
   12                       | type_specifier
   13                       | type_specifier declaration_specifiers
   14                       | type_qualifier
   15                       | type_qualifier declaration_specifiers

   16 primary_expression: IDENTIFIER
   17                   | INT_LITERAL
   18                   | STRING_LITERAL
   19                   | '(' expression ')'

   20 postfix_expression: primary_expression
   21                   | postfix_expression '[' expression ']'
   22                   | postfix_expression '(' ')'
   23                   | postfix_expression '(' argument_expression_list ')'
   24                   | postfix_expression '.' IDENTIFIER
   25                   | postfix_expression PTR_OP IDENTIFIER
   26                   | postfix_expression INC_OP
   27                   | postfix_expression DEC_OP

   28 argument_expression_list: assignment_expression
   29                         | argument_expression_list ',' assignment_expression

   30 unary_expression: postfix_expression
   31                 | INC_OP unary_expression
   32                 | DEC_OP unary_expression
   33                 | unary_operator cast_expression
   34                 | SIZEOF unary_expression
   35                 | SIZEOF '(' type_name ')'

   36 unary_operator: '&'
   37               | '*'
   38               | '+'
   39               | '-'
   40               | '~'
   41               | '!'

   42 cast_expression: unary_expression
   43                | '(' type_name ')' cast_expression

   44 multiplicative_expression: cast_expression
   45                          | multiplicative_expression '*' cast_expression
   46                          | multiplicative_expression '/' cast_expression
   47                          | multiplicative_expression '%' cast_expression

   48 additive_expression: multiplicative_expression
   49                    | additive_expression '+' multiplicative_expression
   50                    | additive_expression '-' multiplicative_expression

   51 shift_expression: additive_expression
   52                 | shift_expression LEFT_OP additive_expression
   53                 | shift_expression RIGHT_OP additive_expression

   54 relational_expression: shift_expression
   55                      | relational_expression '<' shift_expression
   56                      | relational_expression '>' shift_expression
   57                      | relational_expression LE_OP shift_expression
   58                      | relational_expression GE_OP shift_expression

   59 equality_expression: relational_expression
   60                    | equality_expression EQ_OP relational_expression
   61                    | equality_expression NE_OP relational_expression

   62 and_expression: equality_expression
   63               | and_expression '&' equality_expression

   64 exclusive_or_expression: and_expression
   65                        | exclusive_or_expression '^' and_expression

   66 inclusive_or_expression: exclusive_or_expression
   67                        | inclusive_or_expression '|' exclusive_or_expression

   68 logical_and_expression: inclusive_or_expression
   69                       | logical_and_expression AND_OP inclusive_or_expression

   70 logical_or_expression: logical_and_expression
   71                      | logical_or_expression OR_OP logical_and_expression

   72 conditional_expression: logical_or_expression
   73                       | logical_or_expression '?' expression ':' conditional_expression

   74 assignment_expression: conditional_expression
   75                      | unary_expression assignment_operator assignment_expression

   76 assignment_operator: '='
   77                    | MUL_ASSIGN
   78                    | DIV_ASSIGN
   79                    | MOD_ASSIGN
   80                    | ADD_ASSIGN
   81                    | SUB_ASSIGN
   82                    | LEFT_ASSIGN
   83                    | RIGHT_ASSIGN
   84                    | AND_ASSIGN
   85                    | XOR_ASSIGN
   86                    | OR_ASSIGN

   87 expression: assignment_expression

   88 constant_expression: conditional_expression

   89 declaration: declaration_specifiers ';'
   90            | declaration_specifiers init_declarator_list ';'

   91 init_declarator_list: init_declarator
   92                     | init_declarator_list ',' init_declarator

   93 init_declarator: declarator
   94                | declarator '=' initializer

   95 storage_class_specifier: TYPEDEF
   96                        | EXTERN
   97                        | STATIC
   98                        | AUTO
   99                        | REGISTER

  100 type_specifier: VOID
  101               | CHAR
  102               | SHORT
  103               | INT
  104               | LONG
  105               | FLOAT
  106               | DOUBLE
  107               | SIGNED
  108               | UNSIGNED
  109               | struct_or_union_specifier
  110               | enum_specifier
  111               | TYPE_NAME

  112 struct_or_union_specifier: struct_or_union IDENTIFIER '{' struct_declaration_list '}'
  113                          | struct_or_union '{' struct_declaration_list '}'
  114                          | struct_or_union IDENTIFIER

  115 struct_or_union: STRUCT
  116                | UNION

  117 struct_declaration_list: struct_declaration
  118                        | struct_declaration_list struct_declaration

  119 struct_declaration: specifier_qualifier_list struct_declarator_list ';'

  120 specifier_qualifier_list: type_specifier specifier_qualifier_list
  121                         | type_specifier
  122                         | type_qualifier specifier_qualifier_list
  123                         | type_qualifier

  124 struct_declarator_list: struct_declarator
  125                       | struct_declarator_list ',' struct_declarator

  126 struct_declarator: declarator
  127                  | ':' constant_expression
  128                  | declarator ':' constant_expression

  129 enum_specifier: ENUM '{' enumerator_list '}'
  130               | ENUM IDENTIFIER '{' enumerator_list '}'
  131               | ENUM IDENTIFIER

  132 enumerator_list: enumerator
  133                | enumerator_list ',' enumerator

  134 enumerator: IDENTIFIER
  135           | IDENTIFIER '=' constant_expression

  136 type_qualifier: CONST
  137               | VOLATILE

  138 declarator: pointer direct_declarator
  139           | direct_declarator

  140 direct_declarator: IDENTIFIER
  141                  | '(' declarator ')'
  142                  | direct_declarator '[' constant_expression ']'
  143                  | direct_declarator '[' ']'
  144                  | direct_declarator '(' parameter_type_list ')'
  145                  | direct_declarator '(' identifier_list ')'
  146                  | direct_declarator '(' ')'

  147 pointer: '*'
  148        | '*' type_qualifier_list
  149        | '*' pointer
  150        | '*' type_qualifier_list pointer

  151 type_qualifier_list: type_qualifier
  152                    | type_qualifier_list type_qualifier

  153 parameter_type_list: parameter_list
  154                    | parameter_list ',' ELLIPSIS

  155 parameter_list: parameter_declaration
  156               | parameter_list ',' parameter_declaration

  157 parameter_declaration: declaration_specifiers declarator
  158                      | declaration_specifiers abstract_declarator
  159                      | declaration_specifiers

  160 identifier_list: IDENTIFIER
  161                | identifier_list ',' IDENTIFIER

  162 type_name: specifier_qualifier_list
  163          | specifier_qualifier_list abstract_declarator

  164 abstract_declarator: pointer
  165                    | direct_abstract_declarator
  166                    | pointer direct_abstract_declarator

  167 direct_abstract_declarator: '(' abstract_declarator ')'
  168                           | '[' ']'
  169                           | '[' constant_expression ']'
  170                           | direct_abstract_declarator '[' ']'
  171                           | direct_abstract_declarator '[' constant_expression ']'
  172                           | '(' ')'
  173                           | '(' parameter_type_list ')'
  174                           | direct_abstract_declarator '(' ')'
  175                           | direct_abstract_declarator '(' parameter_type_list ')'

  176 initializer: assignment_expression
  177            | '{' initializer_list '}'
  178            | '{' initializer_list ',' '}'

  179 initializer_list: initializer
  180                 | initializer_list ',' initializer

  181 statement: labeled_statement
  182          | compound_statement
  183          | expression_statement
  184          | selection_statement
  185          | iteration_statement
  186          | jump_statement

  187 labeled_statement: IDENTIFIER ':' statement
  188                  | CASE constant_expression ':' statement
  189                  | DEFAULT ':' statement

  190 compound_statement: '{' '}'
  191                   | '{' statement_list '}'
  192                   | '{' declaration_list '}'
  193                   | '{' declaration_list statement_list '}'

  194 declaration_list: declaration
  195                 | declaration_list declaration

  196 statement_list: statement
  197               | statement_list statement

  198 expression_statement: ';'
  199                     | expression ';'

  200 selection_statement: IF '(' expression ')' statement
  201                    | IF '(' expression ')' statement ELSE statement
  202                    | SWITCH '(' expression ')' statement

  203 iteration_statement: WHILE '(' expression ')' statement
  204                    | DO statement WHILE '(' expression ')' ';'
  205                    | FOR '(' expression_statement expression_statement ')' statement
  206                    | FOR '(' expression_statement expression_statement expression ')' statement

  207 jump_statement: GOTO IDENTIFIER ';'
  208               | CONTINUE ';'
  209               | BREAK ';'
  210               | RETURN ';'
  211               | RETURN expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 41
    '%' (37) 47
    '&' (38) 36 63
    '(' (40) 19 22 23 35 43 141 144 145 146 167 172 173 174 175 200 201 202 203 204 205 206
    ')' (41) 19 22 23 35 43 141 144 145 146 167 172 173 174 175 200 201 202 203 204 205 206
    '*' (42) 37 45 147 148 149 150
    '+' (43) 38 49
    ',' (44) 29 92 125 133 154 156 161 178 180
    '-' (45) 39 50
    '.' (46) 24
    '/' (47) 46
    ':' (58) 73 127 128 187 188 189
    ';' (59) 89 90 119 198 199 204 207 208 209 210 211
    '<' (60) 55
    '=' (61) 76 94 135
    '>' (62) 56
    '?' (63) 73
    '[' (91) 21 142 143 168 169 170 171
    ']' (93) 21 142 143 168 169 170 171
    '^' (94) 65
    '{' (123) 112 113 129 130 177 178 190 191 192 193
    '|' (124) 67
    '}' (125) 112 113 129 130 177 178 190 191 192 193
    '~' (126) 40
    error (256)
    INT_LITERAL <number> (258) 17
    IDENTIFIER <string> (259) 16 24 25 112 114 130 131 134 135 140 160 161 187 207
    CONSTANT (260)
    STRING_LITERAL (261) 18
    SIZEOF (262) 34 35
    PTR_OP (263) 25
    INC_OP (264) 26 31
    DEC_OP (265) 27 32
    LEFT_OP (266) 52
    RIGHT_OP (267) 53
    LE_OP (268) 57
    GE_OP (269) 58
    EQ_OP (270) 60
    NE_OP (271) 61
    AND_OP (272) 69
    OR_OP (273) 71
    MUL_ASSIGN (274) 77
    DIV_ASSIGN (275) 78
    MOD_ASSIGN (276) 79
    ADD_ASSIGN (277) 80
    SUB_ASSIGN (278) 81
    LEFT_ASSIGN (279) 82
    RIGHT_ASSIGN (280) 83
    AND_ASSIGN (281) 84
    XOR_ASSIGN (282) 85
    OR_ASSIGN (283) 86
    TYPE_NAME (284) 111
    TYPEDEF (285) 95
    EXTERN (286) 96
    STATIC (287) 97
    AUTO (288) 98
    REGISTER (289) 99
    CHAR (290) 101
    SHORT (291) 102
    INT (292) 103
    LONG (293) 104
    SIGNED (294) 107
    UNSIGNED (295) 108
    FLOAT (296) 105
    DOUBLE (297) 106
    CONST (298) 136
    VOLATILE (299) 137
    VOID (300) 100
    STRUCT (301) 115
    UNION (302) 116
    ENUM (303) 129 130 131
    ELLIPSIS (304) 154
    CASE <node> (305) 188
    DEFAULT <node> (306) 189
    IF <node> (307) 200 201
    ELSE <node> (308) 201
    SWITCH <node> (309) 202
    WHILE <node> (310) 203 204
    DO <node> (311) 204
    FOR <node> (312) 205 206
    GOTO <node> (313) 207
    CONTINUE <node> (314) 208
    BREAK <node> (315) 209
    RETURN <node> (316) 210 211


Nonterminals, with rules where they appear

    $accept (86)
        on left: 0
    ROOT <node> (87)
        on left: 1
        on right: 0
    translation_unit <node> (88)
        on left: 2 3
        on right: 1 3
    external_declaration <node> (89)
        on left: 4 5
        on right: 2 3
    function_definition <node> (90)
        on left: 6 7 8 9
        on right: 4
    declaration_specifiers <type_> (91)
        on left: 10 11 12 13 14 15
        on right: 6 7 11 13 15 89 90 157 158 159
    primary_expression <node> (92)
        on left: 16 17 18 19
        on right: 20
    postfix_expression <node> (93)
        on left: 20 21 22 23 24 25 26 27
        on right: 21 22 23 24 25 26 27 30
    argument_expression_list <node> (94)
        on left: 28 29
        on right: 23 29
    unary_expression <node> (95)
        on left: 30 31 32 33 34 35
        on right: 31 32 34 42 75
    unary_operator (96)
        on left: 36 37 38 39 40 41
        on right: 33
    cast_expression <node> (97)
        on left: 42 43
        on right: 33 43 44 45 46 47
    multiplicative_expression <node> (98)
        on left: 44 45 46 47
        on right: 45 46 47 48 49 50
    additive_expression <node> (99)
        on left: 48 49 50
        on right: 49 50 51 52 53
    shift_expression <node> (100)
        on left: 51 52 53
        on right: 52 53 54 55 56 57 58
    relational_expression <node> (101)
        on left: 54 55 56 57 58
        on right: 55 56 57 58 59 60 61
    equality_expression <node> (102)
        on left: 59 60 61
        on right: 60 61 62 63
    and_expression <node> (103)
        on left: 62 63
        on right: 63 64 65
    exclusive_or_expression <node> (104)
        on left: 64 65
        on right: 65 66 67
    inclusive_or_expression <node> (105)
        on left: 66 67
        on right: 67 68 69
    logical_and_expression <node> (106)
        on left: 68 69
        on right: 69 70 71
    logical_or_expression <node> (107)
        on left: 70 71
        on right: 71 72 73
    conditional_expression <node> (108)
        on left: 72 73
        on right: 73 74 88
    assignment_expression <node> (109)
        on left: 74 75
        on right: 28 29 75 87 176
    assignment_operator (110)
        on left: 76 77 78 79 80 81 82 83 84 85 86
        on right: 75
    expression <node> (111)
        on left: 87
        on right: 19 21 73 199 200 201 202 203 204 206 211
    constant_expression <node> (112)
        on left: 88
        on right: 127 128 135 142 169 171 188
    declaration <node> (113)
        on left: 89 90
        on right: 5 194 195
    init_declarator_list (114)
        on left: 91 92
        on right: 90 92
    init_declarator <node> (115)
        on left: 93 94
        on right: 91 92
    storage_class_specifier (116)
        on left: 95 96 97 98 99
        on right: 10 11
    type_specifier <type_> (117)
        on left: 100 101 102 103 104 105 106 107 108 109 110 111
        on right: 12 13 120 121
    struct_or_union_specifier (118)
        on left: 112 113 114
        on right: 109
    struct_or_union (119)
        on left: 115 116
        on right: 112 113 114
    struct_declaration_list <node> (120)
        on left: 117 118
        on right: 112 113 118
    struct_declaration <node> (121)
        on left: 119
        on right: 117 118
    specifier_qualifier_list <node> (122)
        on left: 120 121 122 123
        on right: 119 120 122 162 163
    struct_declarator_list <node> (123)
        on left: 124 125
        on right: 119 125
    struct_declarator <node> (124)
        on left: 126 127 128
        on right: 124 125
    enum_specifier <node> (125)
        on left: 129 130 131
        on right: 110
    enumerator_list <node> (126)
        on left: 132 133
        on right: 129 130 133
    enumerator <node> (127)
        on left: 134 135
        on right: 132 133
    type_qualifier (128)
        on left: 136 137
        on right: 14 15 122 123 151 152
    declarator <node> (129)
        on left: 138 139
        on right: 6 7 8 9 93 94 126 128 141 157
    direct_declarator <node> (130)
        on left: 140 141 142 143 144 145 146
        on right: 138 139 142 143 144 145 146
    pointer <node> (131)
        on left: 147 148 149 150
        on right: 138 149 150 164 166
    type_qualifier_list (132)
        on left: 151 152
        on right: 148 150 152
    parameter_type_list (133)
        on left: 153 154
        on right: 144 173 175
    parameter_list <node> (134)
        on left: 155 156
        on right: 153 154 156
    parameter_declaration <node> (135)
        on left: 157 158 159
        on right: 155 156
    identifier_list <node> (136)
        on left: 160 161
        on right: 145 161
    type_name <node> (137)
        on left: 162 163
        on right: 35 43
    abstract_declarator <node> (138)
        on left: 164 165 166
        on right: 158 163 167
    direct_abstract_declarator <node> (139)
        on left: 167 168 169 170 171 172 173 174 175
        on right: 165 166 170 171 174 175
    initializer <node> (140)
        on left: 176 177 178
        on right: 94 179 180
    initializer_list <node> (141)
        on left: 179 180
        on right: 177 178 180
    statement <node> (142)
        on left: 181 182 183 184 185 186
        on right: 187 188 189 196 197 200 201 202 203 204 205 206
    labeled_statement <node> (143)
        on left: 187 188 189
        on right: 181
    compound_statement <scoper> (144)
        on left: 190 191 192 193
        on right: 6 7 8 9 182
    declaration_list <listptr> (145)
        on left: 194 195
        on right: 6 8 192 193 195
    statement_list <listptr> (146)
        on left: 196 197
        on right: 191 193 197
    expression_statement <node> (147)
        on left: 198 199
        on right: 183 205 206
    selection_statement <node> (148)
        on left: 200 201 202
        on right: 184
    iteration_statement <node> (149)
        on left: 203 204 205 206
        on right: 185
    jump_statement <node> (150)
        on left: 207 208 209 210 211
        on right: 186


State 0

    0 $accept: . ROOT $end

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    ROOT                       go to state 24
    translation_unit           go to state 25
    external_declaration       go to state 26
    function_definition        go to state 27
    declaration_specifiers     go to state 28
    declaration                go to state 29
    storage_class_specifier    go to state 30
    type_specifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    enum_specifier             go to state 34
    type_qualifier             go to state 35
    declarator                 go to state 36
    direct_declarator          go to state 37
    pointer                    go to state 38


State 1

  140 direct_declarator: IDENTIFIER .

    $default  reduce using rule 140 (direct_declarator)


State 2

  111 type_specifier: TYPE_NAME .

    $default  reduce using rule 111 (type_specifier)


State 3

   95 storage_class_specifier: TYPEDEF .

    $default  reduce using rule 95 (storage_class_specifier)


State 4

   96 storage_class_specifier: EXTERN .

    $default  reduce using rule 96 (storage_class_specifier)


State 5

   97 storage_class_specifier: STATIC .

    $default  reduce using rule 97 (storage_class_specifier)


State 6

   98 storage_class_specifier: AUTO .

    $default  reduce using rule 98 (storage_class_specifier)


State 7

   99 storage_class_specifier: REGISTER .

    $default  reduce using rule 99 (storage_class_specifier)


State 8

  101 type_specifier: CHAR .

    $default  reduce using rule 101 (type_specifier)


State 9

  102 type_specifier: SHORT .

    $default  reduce using rule 102 (type_specifier)


State 10

  103 type_specifier: INT .

    $default  reduce using rule 103 (type_specifier)


State 11

  104 type_specifier: LONG .

    $default  reduce using rule 104 (type_specifier)


State 12

  107 type_specifier: SIGNED .

    $default  reduce using rule 107 (type_specifier)


State 13

  108 type_specifier: UNSIGNED .

    $default  reduce using rule 108 (type_specifier)


State 14

  105 type_specifier: FLOAT .

    $default  reduce using rule 105 (type_specifier)


State 15

  106 type_specifier: DOUBLE .

    $default  reduce using rule 106 (type_specifier)


State 16

  136 type_qualifier: CONST .

    $default  reduce using rule 136 (type_qualifier)


State 17

  137 type_qualifier: VOLATILE .

    $default  reduce using rule 137 (type_qualifier)


State 18

  100 type_specifier: VOID .

    $default  reduce using rule 100 (type_specifier)


State 19

  115 struct_or_union: STRUCT .

    $default  reduce using rule 115 (struct_or_union)


State 20

  116 struct_or_union: UNION .

    $default  reduce using rule 116 (struct_or_union)


State 21

  129 enum_specifier: ENUM . '{' enumerator_list '}'
  130               | ENUM . IDENTIFIER '{' enumerator_list '}'
  131               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 39
    '{'         shift, and go to state 40


State 22

  141 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    declarator         go to state 41
    direct_declarator  go to state 37
    pointer            go to state 38


State 23

  147 pointer: '*' .
  148        | '*' . type_qualifier_list
  149        | '*' . pointer
  150        | '*' . type_qualifier_list pointer

    CONST     shift, and go to state 16
    VOLATILE  shift, and go to state 17
    '*'       shift, and go to state 23

    $default  reduce using rule 147 (pointer)

    type_qualifier       go to state 42
    pointer              go to state 43
    type_qualifier_list  go to state 44


State 24

    0 $accept: ROOT . $end

    $end  shift, and go to state 45


State 25

    1 ROOT: translation_unit .
    3 translation_unit: translation_unit . external_declaration

    IDENTIFIER  shift, and go to state 1
    TYPE_NAME   shift, and go to state 2
    TYPEDEF     shift, and go to state 3
    EXTERN      shift, and go to state 4
    STATIC      shift, and go to state 5
    AUTO        shift, and go to state 6
    REGISTER    shift, and go to state 7
    CHAR        shift, and go to state 8
    SHORT       shift, and go to state 9
    INT         shift, and go to state 10
    LONG        shift, and go to state 11
    SIGNED      shift, and go to state 12
    UNSIGNED    shift, and go to state 13
    FLOAT       shift, and go to state 14
    DOUBLE      shift, and go to state 15
    CONST       shift, and go to state 16
    VOLATILE    shift, and go to state 17
    VOID        shift, and go to state 18
    STRUCT      shift, and go to state 19
    UNION       shift, and go to state 20
    ENUM        shift, and go to state 21
    '('         shift, and go to state 22
    '*'         shift, and go to state 23

    $default  reduce using rule 1 (ROOT)
